<resources>
    <string name="app_name">TrackMe</string>
    <string name="email_hint_text">Email</string>
    <string name="password_hint">Password</string>
    <string name="signin_button_label">SIGN IN</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="title_text">Track ME</string>
    <string name="or_text">or</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="text_tracking">Activity</string>
    <string name="text_history">History</string>
    <string name="text_account">Account</string>
    <string name="display_signin_account">Your account: %s</string>
    <string name="display_distance">%s m</string>
    <string name="display_speed">%s m/s</string>
    <string name="display_time">%2s:%2s:%2s</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDjMKqkYTZDSreFyjpTJC57NWVXVM1X-Z0
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out_text">SIGN OUT</string>
    <string name="ok">OK</string>
    <string name="permission_access_location">We need to use GPS to access your location</string>
    <string name="permissions_not_granted">Permission not granted. We need this to track your activity</string>
    <string name="default_distance_text">-- m</string>
    <string name="distance_text">Distance</string>
    <string name="speed_text">Speed</string>
    <string name="default_speed_text">-- m/s</string>
    <string name="default_time_tracking_text">00:00:00</string>
    <string name="saved_state_key">KEY_STATE_TRACKING</string>
    <string name="avg_speed_text">Avg. Speed</string>
    <string name="logging">Logging in</string>
    <string name="quit_text">Are you sure you want to quit?</string>
    <string name="confirm_text">Confirm</string>
    <string name="yes_text">YES</string>
    <string name="no_text">NO</string>
    <string name="your_email_text">Your email</string>
    <string name="see_session_history_text">Go to history tab to see sessions</string>
    <string name="no_network_text">No internet connection. Please connect to Wifi or cellular to load data.</string>
</resources>
