<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_item"
    android:layout_width="match_parent"
    android:layout_height="360dp"
    android:orientation="vertical">

    <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:id="@+id/map1"-->
        <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="6" />-->

    <com.google.android.gms.maps.MapView
        android:id="@+id/fragment_embedded_map_view_mapview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_distance1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_distance_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_speed1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_speed_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_text"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_time1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/default_time_tracking_text"/>

    </LinearLayout>
</LinearLayout>
